<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detailsScreen.DetailsFragment"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:padding="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="Edit Todo"
        app:titleTextColor="@color/black" />

    <!-- Made height to match parent instead of 0dp in CompatLinear-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/title_text"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:padding="14dp"
            android:hint=""
            android:inputType="text"
            android:background="@drawable/edit_text"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/description_title"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/description_input"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/edit_text"
            android:padding="14dp"
            android:hint=""
            android:inputType="text" />

        <TextView
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:text="@string/status_text"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <!-- added weight 1 to push the buttons to end  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/check_box_done"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:id="@+id/done_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done_text"
                android:textColor="@color/black"
                android:textSize="18sp"

                />
        </LinearLayout>
            <!--     android:layout_marginVertical="100dp" -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >


                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_button"
                    android:textColor="@color/purple_200"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/MyApp.Widget.RoundWhiteButton"
                    />

                <Button
                    android:id="@+id/button_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_delete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:backgroundTint="@color/navy_blue"
                    app:layout_constraintEnd_toStartOf="@+id/button_saveTaskJournal"
                    app:layout_constraintStart_toEndOf="@+id/button_cancel"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_saveTaskJournal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_done_text"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />

            </androidx.constraintlayout.widget.ConstraintLayout>





    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>